--- a/ksiegarnia.html
+++ b/ksiegarnia.html
@@ -41,7 +41,7 @@
                 <label>Strony</label>
                 <input id="strony" type="number" name="strony">
                 <label>Cena</label>
-                <input id="cena" type="number" name="cena">
+                <input id="cena" type="number" step="0.01" name="cena">
                 <select id="waluta" name="waluta">
                     <option>zł</option>
                 </select>
